# ros_drone

./: .gitignore  doc.typ
src/coletor/: package.xml  setup.cfg  setup.py
src/missions/: CMakeLists.txt  package.xml
src/missions/include/: mission_cycle.h
src/missions/src/mission1/: main.cpp  mission_cycle.cpp
src/my_px4_interfaces/: CMakeLists.txt  package.xml
src/px4_msgs/: CMakeLists.txt
src/px4_msgs/action/: ExecuteMission.action  GoToPostion.action
src/px4_msgs/srv/: DetectAruco.srv
src/px4_ros_com/: CMakeLists.txt  package.xml
src/px4_ros_com/include/: action_server.h  offboard.h
src/px4_ros_com/launch/: mission1_launch.launch.py
src/px4_ros_com/src/examples/offboard/: offboard1.cpp  offboard4.cpp  offboard5.cpp  offboard_control.cpp  offborad_control2.cpp
src/px4_ros_com/src/examples/offboard_py/: offboard_control.py
src/px4_ros_com/src/missions/: action_server.cpp  detect_aruco.py  drone.cpp  main.cpp  mission3.cpp  mission_action.cpp  missions_action.py  offboard.cpp  offboard_vel.cpp  swarm_control.cpp
src/swarm_drone/: CMakeLists.txt  package.xml
src/swarm_drone/src/: offboard2.cpp  offboard3.cpp
