<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coletor</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="marcoolivera096@gmail.com">marco</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>ros_environment</build_depend>

  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>

  <depend>px4_msgs</depend>
  <depend>my_px4_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>opencv</depend>
  <depend>numpy</depend>
  <depend>imutils</depend>

  <depend>launch</depend>
  <depend>launch_testing</depend>
  <depend>launch_testing_ros</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>eigen</build_export_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
